# team_3_project

./: .env.exam  .gitignore  README.md  docker-compose.yaml  main copy.py  main.py  pyproject.toml  requirements.txt  start.py  test_clou.py
alembic/: env.py
alembic/versions/: 02d1713b3009_newinit.py  146858b87546_add_rate.py  181cce6cf248_.py  1c900eae85b6_add_rate.py  22e0a92d7f8a_remove_author_from_tag.py  270169da9fed_add_rate.py  37747b16d397_add_photo_id.py  57fe92f5e06a_init.py  5dd44bbc323b_fix_photo_tag_association.py  5e57bb84f3bf_fix_transform_photo.py  5ea6b68db9ec_fix_comments.py  60bea5fac42f_fix_photo_s_user.py  60f90e07c7b2_init_2.py  61cac9ec11f8_add_rate.py  61d34b163732_new_revision.py  62ce321d549e_fix_comments.py  a018142f4dcc_add_photo_ratings_to_user.py  a55132684dff_fix_photo_and_user.py  ade25286cdc0_опис_змін.py  b61c13621c2a_initial.py  c4943b225fd5_rate_to_count_in_user.py  cc8d9aeb012a_.py  cd75cec6a507_add_author_id_to_tag.py  ce12dde22c5f_.py  e2a874ec1bbf_add_ban_to_user.py  ee7bea8a2730_опис_змін.py  eece3f3be199_add_rate.py
db_data/pgdata/: postmaster.pid
schemas/: posts.py
src/conf/: config.py
src/database/: connect.py  models.py  photo_service.py
src/repository/: comments.py  posts.py  tags.py  transformations.py  users.py
src/routes/: auth.py  comments.py  posts.py  transformations.py  users.py
src/schemas/: comments.py  posts.py  transformations.py  users.py
src/services/: auth.py  cloudinary.py  mail.py  photo_saver.py  photo_service.py  users.py
src/templates/: email_template.html  message.py
(+70 files in other folders)
